<resources>
    <string name="app_name">HaVagas</string>
    <string name="preencha_ses_dados">Preencha ses dados</string>
    <string name="nome">Nome Completo</string>
    <string name="email">Email</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="checkboxEmail">Deseja receber emails com atualizacoes de oportunidades?</string>
    <string name="telefone">Telefone</string>
    <string name="comercial">Comercial</string>
    <string name="celular">Telefone Celular</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="ano_de_formatura">Ano de formatura</string>
    <string name="ano_de_conclusao">Ano de conclusao</string>
    <string name="instituicao">Instituicao</string>
    <string name="titulo_de_monografia">Título de monografia</string>
    <string name="orientador">Orientador</string>
    <string name="adicionar_telefone_celular">Adicionar telefone celular?</string>
    <string name="residencial">Residencial</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>