<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/preencha_ses_dados"
            />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:layout_marginTop="5dp"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/emailCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkboxEmail"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="5dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/comercial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/comercial"
                android:layout_weight="1"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/residencial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/residencial"
                android:layout_weight="1"
                />
        </RadioGroup>

        <CheckBox
            android:id="@+id/adicionarCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_telefone_celular"
            />


        <EditText
            android:id="@+id/celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/celular"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="5dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:layout_weight="1"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/massculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:layout_weight="1"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_de_nascimento"
            android:ems="10"
            android:inputType="date"
            android:layout_marginTop="5dp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"
            android:minHeight="48dp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano_de_formatura"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/anoConclusaoOp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano_de_conclusao"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/instituicaoOp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/anoConclusaoOp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ano_de_conclusao"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/instituicaoOp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/instituicao"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                />

            <EditText
                android:id="@+id/tituloMonografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_de_monografia"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                />

            <EditText
                android:id="@+id/orientador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientador"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/vagas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vagas_de_interesse"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/salvarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
</ScrollView>
